kubernetes-objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: |
          docker.io/cooktheryan/web:c055c2fa1294ee36498897ab7f31921c60572584
        name: web
        ports:
        - containerPort: 8443
        resources: {}
status: {}
