kubernetes-objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
    nodePort: 30007
  selector:
    app: web
