kubernetes-objects/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: web
  name: web
  namespace: web
spec:
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
